@@ -1,3 +1,9 @@
+Mon Apr 14 18:44:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* addr2line.c (fill_lines): get base addrs in fill_lines to use it
+	  with dladdr_fbases introduced at r45563.
+	  it didn't get before if the executalbe is not pie.
+
 Mon Apr 14 18:05:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* addr2line.c (main_exe_path): support FreeBSD.
